# axum-derive-state

./: Cargo.toml
src/: lib.rs
tests/compiling/: 01-derive-struct.rs  02-derive-tuple.rs
tests/failing/: 01-does-not-support-unit-struct.rs  01-does-not-support-unit-struct.stderr  02-struct-only-one-instance-of-type.rs  02-struct-only-one-instance-of-type.stderr  03-tuple-struct-only-one-instance-of-type.rs  03-tuple-struct-only-one-instance-of-type.stderr
