[package]
name = "derive_state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
ident_case = "1.0.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.40"
quote = { version = "1.0.20" }
syn = { version = "1.0.98", features = ["full", "extra-traits", "printing"] }
trybuild = "1.0.63"
